[package]
name = "set1"
version = "0.1.0"
authors = ["Stroia Dacian <zademnwalves@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
base64 = "0.13.0"
rayon = "1.5.0"
lazy_static = "1.4.0"
reqwest =  { version = "0.11", features = ["blocking"] }
bit-vec = "0.6"
itertools = "0.10.0"
aes = "0.6.0"
block-modes = "0.7.0"
hex-literal = "0.3.1"
utils = {path="../utils/"}
