[package]
name = "set1"
version = "0.1.0"
authors = ["Stroia Dacian <zademnwalves@gmail.com>"]
edition = "2018"

[dependencies]
base64 = "0.13.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["blocking"] }
hex = "0.4.3"
rayon = "1.5.1"
itertools = "0.10.0"
aes = "0.7.4"
block-modes = "0.8.1"
hex-literal = "0.3.3"
utils = {path="../utils/"}
