[package]
name = "set3"
version = "0.1.0"
authors = ["Stroia Dacian <zademnwalves@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
bitvec = "0.21.0"
byteorder = "1.4.2"
rand = "0.8.3"
set1 = {path="../set1/"}
set2 = {path="../set2/"}
utils = {path="../utils/"}
