[package]
name = "set4"
version = "0.1.0"
authors = ["Stroia Dacian <zademnwalves@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
rand = "0.8.3"
set1 = {path="../set1/"}
set2 = {path="../set2/"}
set3 = {path="../set3/"}
utils = {path="../utils/"}