[package]
name = "utils"
version = "0.1.0"
authors = ["Stroia Dacian <zademnwalves@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.2"
duplicate = "0.2.9"
num-bigint = { version = "0.7.0", features = ["rand", "prime"] , package = "num-bigint-dig"}
num-traits = "0.2.14"
ramp = "0.6.0"
rand = "0.8.3"
rayon = "1.5.0"
